Change structure of ImagesPDFDocument.And make main program can handle error.
Former-commit-id: 22577f0c71b1e08542649c53207881055b98e181

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -1,4 +1,8 @@
-help_create=\u8F38\u5165"create -h"\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
+root_description=\u9019\u500B\u61C9\u7528\u7A0B\u5F0F\u7528\u65BC\u5C07\u591A\u500B\u5716\u6A94\u8F49\u6A94\u6216\u5408\u4F75\u6210\u55AE\u500Bpdf\u3002\u9375\u5165-h\u53EF\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
+
+help_action=\u57F7\u884C\u7684\u52D5\u4F5C
+
+help_create=\u8F49\u63DB\u4E4B\u524D\uFF0C\u61C9\u5BA3\u544Apdf\u7684\u5916\u89C0\uFF08\u5927\u5C0F\uFF0C\u5C0D\u9F4A\u65B9\u5F0F\u7B49\uFF09\uFF0C\u4E26\u5BA3\u544A\u5716\u6E90\u7684\u4F4D\u7F6E\u4EE5\u53CApdf\u7684\u4F4D\u7F6E\u3002\u6700\u5F8C\uFF0C\u9019\u4E9B\u53C3\u6578\u5C07\u6703\u5408\u4F75\u5230\u4E00\u500B\u540D\u70BATaskList\u7684xml\u6587\u4EF6\u4E2D\u3002\u9375\u5165create -h\u4EE5\u7372\u5F97\u66F4\u591A\u5E6B\u52A9\u3002
 help_create_pdf_size=\u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002\n\u9375\u5165DEPEND\u4F86\u8A2D\u7F6E\u6BCF\u500B\u9801\u9762\u5927\u5C0F\u53D6\u6C7A\u65BC\u6BCF\u500B\u5716\u7247\u5927\u5C0F\u3002
 help_create_pdf_align= \u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002
 help_create_pdf_direction=\u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002
@@ -19,5 +23,5 @@ help_add=\u8F38\u5165"create import -h"\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u300
 help_add_source=\u4F86\u6E90\u6A94\u6848
 help_add_filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002
 
-help_convert=\u8F38\u5165"convert -h"\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
+help_convert=\u900F\u904E\u904E\u5B9A\u7FA9\u904E\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u9375\u5165convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
 help_convert_tasklist_source=\u4EFB\u52D9\u8868\u4F4D\u7F6E(*.xml)\u3002
