MainProgram able to handle SourceFolderException from startCommand().
Former-commit-id: 30f88bedec4fe0b20d556d26047b9e86400b7a09

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -9,9 +9,9 @@ help_create_pdf_direction=\u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002
 help_create_pdf_auto_rotate=\u81EA\u52D5\u65CB\u8F49\u9801\u9762\u3002
 help_create_pdf_sortby=\u6309\u540D\u7A31\u6216\u65E5\u671F\u6392\u5E8F\u6587\u4EF6\u3002
 help_create_pdf_order=\u901A\u904E\u589E\u52A0\uFF080,1,2,3\uFF09\u6216\u6E1B\u5C11\uFF083,2,1,0\uFF09\u503C\u9032\u884C\u6392\u5E8F\u3002
-help_create_pdf_owner_password=PDF\u64C1\u6709\u8005\u5BC6\u78BC\u3002
+help_create_pdf_owner_password=PDF\u64C1\u6709\u4EBA\u5BC6\u78BC\u3002
 help_create_pdf_user_password=PDF\u7528\u6236\u5BC6\u78BC\u3002
-help_create_pdf_permission=\u6587\u6A94\u7684\u8A2A\u554F\u6B0A\u9650\u3002
+help_create_pdf_permission=\u6587\u4EF6\u7684\u8A2A\u554F\u6B0A\u9650\u3002
 help_create_pdf_destination=\u5DF2\u8F49\u63DB\u6587\u4EF6\u7684\u76EE\u7684\u5730\u3002
 help_create_list_destination=\u8F38\u51FA\u76EE\u6A19\u4EFB\u52D9\u5217\u8868\uFF08*.XML\uFF09\u3002
 
