Complete partial translation in CreateAction.
Former-commit-id: e12a56d49ed54181cb8bd38c00960042a7b0fde4

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -1,6 +1,6 @@
 root_description=\u9019\u500B\u61C9\u7528\u7A0B\u5F0F\u7528\u65BC\u5C07\u591A\u500B\u5716\u6A94\u8F49\u6A94\u6216\u5408\u4F75\u6210\u55AE\u500Bpdf\u3002\u9375\u5165-h\u53EF\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
-
-help_action=\u57F7\u884C\u7684\u52D5\u4F5C
+root_mode=\u8981\u505A\u7684\u52D5\u4F5C.\u8F38\u5165 "-m convert/create -h" \u7372\u53D6\u66F4\u591A\u5E6B\u52A9.\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
+root_help=\u8F38\u5165 "-h" \u7372\u53D6\u66F4\u591A\u5E6B\u52A9.
 
 help_create=\u8F49\u63DB\u4E4B\u524D\uFF0C\u61C9\u5BA3\u544Apdf\u7684\u5916\u89C0\uFF08\u5927\u5C0F\uFF0C\u5C0D\u9F4A\u65B9\u5F0F\u7B49\uFF09\uFF0C\u4E26\u5BA3\u544A\u5716\u6E90\u7684\u4F4D\u7F6E\u4EE5\u53CApdf\u7684\u4F4D\u7F6E\u3002\u6700\u5F8C\uFF0C\u9019\u4E9B\u53C3\u6578\u5C07\u6703\u5408\u4F75\u5230\u4E00\u500B\u540D\u70BATaskList\u7684xml\u6587\u4EF6\u4E2D\u3002\u9375\u5165create -h\u4EE5\u7372\u5F97\u66F4\u591A\u5E6B\u52A9\u3002
 help_create_pdf_size=\u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002\n\u9375\u5165DEPEND\u4F86\u8A2D\u7F6E\u6BCF\u500B\u9801\u9762\u5927\u5C0F\u53D6\u6C7A\u65BC\u6BCF\u500B\u5716\u7247\u5927\u5C0F\u3002
@@ -14,14 +14,23 @@ help_create_pdf_user_password=PDF\u7528\u6236\u5BC6\u78BC\u3002
 help_create_pdf_permission=\u6587\u4EF6\u7684\u8A2A\u554F\u6B0A\u9650\u3002
 help_create_pdf_destination=\u5DF2\u8F49\u63DB\u6587\u4EF6\u7684\u76EE\u7684\u5730\u3002
 help_create_list_destination=\u8F38\u51FA\u76EE\u6A19\u4EFB\u52D9\u5217\u8868\uFF08*.XML\uFF09\u3002
+help_create_source=\u4F86\u6E90\u6A94\u6848
+help_create_filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002
 
-help_import=\u8F38\u5165"create import -h"\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
-help_import_source=\u4F86\u6E90\u6A94\u6848
-help_import_filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002
+help_convert=\u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u8F38\u5165convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
+help_convert_tasklist_source=TaskList \u6A94\u6848(*.xml)
 
-help_add=\u8F38\u5165"create import -h"\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
-help_add_source=\u4F86\u6E90\u6A94\u6848
-help_add_filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002
 
-help_convert=\u900F\u904E\u904E\u5B9A\u7FA9\u904E\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u9375\u5165convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
-help_convert_tasklist_source=\u4EFB\u52D9\u8868\u4F4D\u7F6E(*.xml)\u3002
+err_filenotfound=\u627E\u4E0D\u5230\u6A94\u6848:%s
+err_path_is_file=\u6307\u5411\u7684\u8DEF\u5F91\u5FC5\u9808\u662F\u6A94\u6848:%s
+err_tasklist_create=\u7121\u6CD5\u751F\u6210TaskList:%s
+err_unrecognizable_enum_long=%s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.\r\n\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
+err_unrecognizable_enum_short=%s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.
+common_verified=\u5DF2\u9A57\u8B49
+common_imported=\u5DF2\u532F\u5165
+common_exported=\u5DF2\u532F\u51FA
+
+arg_align=\u9801\u9762\u5C0D\u9F4A
+arg_size=\u9801\u9762\u5C3A\u5BF8
+arg_direction=\u9810\u8A2D\u65B9\u5411
+arg_auto_rotate=\u81EA\u52D5\u65CB\u8F49
