Complete partial translation of CreatAction.Add debug mode.
Former-commit-id: e33091e33d91de994d1a98b2384505c9d28c03cc

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -2,13 +2,14 @@ root_description=\u9019\u500B\u61C9\u7528\u7A0B\u5F0F\u7528\u65BC\u5C07\u591A\u5
 root_mode=\u8981\u505A\u7684\u52D5\u4F5C.\u8F38\u5165 "-m convert/create -h" \u7372\u53D6\u66F4\u591A\u5E6B\u52A9.\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
 root_help=\u8F38\u5165 "-h" \u7372\u53D6\u66F4\u591A\u5E6B\u52A9.
 
+help_create_debug=\u958B\u555F\u5075\u932F\u6A21\u5F0F
 help_create=\u8F49\u63DB\u4E4B\u524D\uFF0C\u61C9\u5BA3\u544Apdf\u7684\u5916\u89C0\uFF08\u5927\u5C0F\uFF0C\u5C0D\u9F4A\u65B9\u5F0F\u7B49\uFF09\uFF0C\u4E26\u5BA3\u544A\u5716\u6E90\u7684\u4F4D\u7F6E\u4EE5\u53CApdf\u7684\u4F4D\u7F6E\u3002\u6700\u5F8C\uFF0C\u9019\u4E9B\u53C3\u6578\u5C07\u6703\u5408\u4F75\u5230\u4E00\u500B\u540D\u70BATaskList\u7684xml\u6587\u4EF6\u4E2D\u3002\u9375\u5165create -h\u4EE5\u7372\u5F97\u66F4\u591A\u5E6B\u52A9\u3002
-help_create_pdf_size=\u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002\n\u9375\u5165DEPEND\u4F86\u8A2D\u7F6E\u6BCF\u500B\u9801\u9762\u5927\u5C0F\u53D6\u6C7A\u65BC\u6BCF\u500B\u5716\u7247\u5927\u5C0F\u3002
+help_create_pdf_size=\u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
 help_create_pdf_align= \u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002
-help_create_pdf_direction=\u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002
+help_create_pdf_direction=\u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
 help_create_pdf_auto_rotate=\u81EA\u52D5\u65CB\u8F49\u9801\u9762\u3002
-help_create_pdf_sortby=\u6309\u540D\u7A31\u6216\u65E5\u671F\u6392\u5E8F\u6587\u4EF6\u3002
-help_create_pdf_order=\u901A\u904E\u589E\u52A0\uFF080,1,2,3\uFF09\u6216\u6E1B\u5C11\uFF083,2,1,0\uFF09\u503C\u9032\u884C\u6392\u5E8F\u3002
+help_create_pdf_sortby=\u6309\u540D\u7A31\u6216\u65E5\u671F\u6392\u5E8F\u6587\u4EF6\u3002\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
+help_create_pdf_sequence=\u7531\u905E\u589E(0,1,2,3) \u6216\u662F \u905E\u6E1B(3,2,1,0) \u7684\u503C\u4F86\u6C7A\u5B9A\u6392\u5E8F\u7684\u9806\u5E8F.\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
 help_create_pdf_owner_password=PDF\u64C1\u6709\u4EBA\u5BC6\u78BC\u3002
 help_create_pdf_user_password=PDF\u7528\u6236\u5BC6\u78BC\u3002
 help_create_pdf_permission=\u6587\u4EF6\u7684\u8A2A\u554F\u6B0A\u9650\u3002
@@ -20,6 +21,9 @@ help_create_filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\
 help_convert=\u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u8F38\u5165convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
 help_convert_tasklist_source=TaskList \u6A94\u6848(*.xml)
 
+import_from_list=\u5F9E %s \u532F\u5165tasks
+source_verifying=\u9A57\u8B49\u4F86\u6E90\u8CC7\u6599\u593E\uFF1A%s
+tasklist_config=TaskList\u8A2D\u5B9A
 
 err_filenotfound=\u627E\u4E0D\u5230\u6A94\u6848:%s
 err_path_is_file=\u6307\u5411\u7684\u8DEF\u5F91\u5FC5\u9808\u662F\u6A94\u6848:%s
@@ -29,8 +33,12 @@ err_unrecognizable_enum_short=%s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.
 common_verified=\u5DF2\u9A57\u8B49
 common_imported=\u5DF2\u532F\u5165
 common_exported=\u5DF2\u532F\u51FA
+common_version=\u7248\u672C
 
 arg_align=\u9801\u9762\u5C0D\u9F4A
 arg_size=\u9801\u9762\u5C3A\u5BF8
 arg_direction=\u9810\u8A2D\u65B9\u5411
 arg_auto_rotate=\u81EA\u52D5\u65CB\u8F49
+arg_source=\u4F86\u6E90\u6A94\u6848
+arg_tasklist_dst=TaskList\u76EE\u6A19\u4F4D\u7F6E
+arg_filter=\u6A94\u6848\u904E\u6FFE\u5668
