Complete translation of CreatAction.
Former-commit-id: 77c6035ae1020a9c9115e9fd69e3955b3c9a4cce

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -34,6 +34,7 @@ common_verified=\u5DF2\u9A57\u8B49
 common_imported=\u5DF2\u532F\u5165
 common_exported=\u5DF2\u532F\u51FA
 common_version=\u7248\u672C
+common_developer=\u958B\u767C\u8005
 
 arg_align=\u9801\u9762\u5C0D\u9F4A
 arg_size=\u9801\u9762\u5C3A\u5BF8
