--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -1,6 +1,6 @@
 root_description=\u9019\u500B\u61C9\u7528\u7A0B\u5F0F\u7528\u65BC\u5C07\u591A\u500B\u5716\u6A94\u8F49\u6A94\u6216\u5408\u4F75\u6210\u55AE\u500Bpdf\u3002\u9375\u5165-h\u53EF\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
-root_mode=\u8981\u505A\u7684\u52D5\u4F5C.\u8F38\u5165 "-m convert/create -h" \u7372\u53D6\u66F4\u591A\u5E6B\u52A9.\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
-root_help=\u8F38\u5165 "-h" \u7372\u53D6\u66F4\u591A\u5E6B\u52A9.
+root_mode=\u8981\u505A\u7684\u52D5\u4F5C\u3002\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
+root_help=\u8F38\u5165 "-h" \u7372\u53D6\u66F4\u591A\u5E6B\u52A9
 
 help_create_debug=\u958B\u555F\u5075\u932F\u6A21\u5F0F
 help_create=\u8F49\u63DB\u4E4B\u524D\uFF0C\u61C9\u5BA3\u544Apdf\u7684\u5916\u89C0\uFF08\u5927\u5C0F\uFF0C\u5C0D\u9F4A\u65B9\u5F0F\u7B49\uFF09\uFF0C\u4E26\u5BA3\u544A\u5716\u6E90\u7684\u4F4D\u7F6E\u4EE5\u53CApdf\u7684\u4F4D\u7F6E\u3002\u6700\u5F8C\uFF0C\u9019\u4E9B\u53C3\u6578\u5C07\u6703\u5408\u4F75\u5230\u4E00\u500B\u540D\u70BATaskList\u7684xml\u6587\u4EF6\u4E2D\u3002\u9375\u5165create -h\u4EE5\u7372\u5F97\u66F4\u591A\u5E6B\u52A9\u3002
