--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -30,6 +30,8 @@ err_path_is_file=\u6307\u5411\u7684\u8DEF\u5F91\u5FC5\u9808\u662F\u6A94\u6848:%s
 err_tasklist_create=\u7121\u6CD5\u751F\u6210TaskList:%s
 err_unrecognizable_enum_long=%s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.\r\n\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
 err_unrecognizable_enum_short=%s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.
+err_missing_option=\u907A\u5931\u5FC5\u8981\u53C3\u6578
+
 common_verified=\u5DF2\u9A57\u8B49
 common_imported=\u5DF2\u532F\u5165
 common_exported=\u5DF2\u532F\u51FA
