--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -22,7 +22,7 @@ help_convert=\u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u571
 help_convert_tasklist_source=TaskList \u6A94\u6848(*.xml)
 
 import_from_list=\u5F9E %s \u532F\u5165tasks
-source_verifying=\u9A57\u8B49\u4F86\u6E90\u8CC7\u6599\u593E\uFF1A%s
+source_verifying=\u9A57\u8B49\u4F86\u6E90\u8CC7\u6599\u593E\uFF1A
 tasklist_config=TaskList\u8A2D\u5B9A
 
 err_filenotfound=\u627E\u4E0D\u5230\u6A94\u6848:%s
@@ -31,6 +31,14 @@ err_tasklist_create=\u7121\u6CD5\u751F\u6210TaskList:%s
 err_unrecognizable_enum_long=%s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.\r\n\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
 err_unrecognizable_enum_short=%s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.
 err_missing_option=\u907A\u5931\u5FC5\u8981\u53C3\u6578
+err_missing_argument_option=%s\u6C92\u6709\u63D0\u4F9B\u53C3\u6578\u503C
+
+err_source_filenotfound=\u4F86\u6E90\u76EE\u9304\u5F91\u5728%s\u7B2C%d\u884C\u4E0D\u5B58\u5728->%s
+err_source_path_is_file=\u4F86\u6E90\u76EE\u9304\u5F91\u5728%s\u7B2C%d\u884C\u5FC5\u9808\u662F\u76EE\u9304\uFF0C\u4E0D\u662F\u6A94\u6848->%s
+
+common_verifying=\u9A57\u8B49
+common_importing=\u532F\u5165
+common_exporting=\u532F\u51FA
 
 common_verified=\u5DF2\u9A57\u8B49
 common_imported=\u5DF2\u532F\u5165
