Change compare method of FileFilterHelper to PathMatcher

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -37,6 +37,8 @@ common_version = \u7248\u672C
 
 err_filenotfound = \u627E\u4E0D\u5230\u6A94\u6848:%s
 
+err_filter = \u6A94\u6848\u904E\u6FFE\u5668\u932F\u8AA4\uFF1A%s
+
 err_missing_argument_option = %s\u6C92\u6709\u63D0\u4F9B\u53C3\u6578\u503C
 
 err_missing_option = \u907A\u5931\u5FC5\u8981\u53C3\u6578
