--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -56,14 +56,13 @@ err_unrecognizable_enum_long = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s\u3002\r\
 err_unrecognizable_enum_short = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.
 
 err_unrecognized_option = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684\u9078\u9805\u3002
-
-help_convert = \u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u8F38\u5165convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
+help_convert=\u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u8F38\u5165-m convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
 help_convert_memory_max_usage=\u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\u9810\u8A2D\uFF1A%s
 help_convert_open_when_complete=\u5B8C\u6210\u8F49\u6A94\u5F8C\u958B\u555FPDF
 help_convert_overwrite_output=\u8986\u84CB\u5DF2\u5B58\u5728\u7684\u6A94\u6848
 help_convert_tasklist_source = TaskList \u6A94\u6848(*.xml)
 help_convert_tmp_folder=\u66AB\u5B58\u8CC7\u6599\u593E\u3002\u9810\u8A2D\u4F4D\u7F6E\uFF1A%s
-help_create = \u8F49\u63DB\u4E4B\u524D\uFF0C\u61C9\u5BA3\u544Apdf\u7684\u5916\u89C0\uFF08\u5927\u5C0F\uFF0C\u5C0D\u9F4A\u65B9\u5F0F\u7B49\uFF09\uFF0C\u4E26\u5BA3\u544A\u5716\u6E90\u7684\u4F4D\u7F6E\u4EE5\u53CApdf\u7684\u4F4D\u7F6E\u3002\u6700\u5F8C\uFF0C\u9019\u4E9B\u53C3\u6578\u5C07\u6703\u5408\u4F75\u5230\u4E00\u500B\u540D\u70BATaskList\u7684xml\u6587\u4EF6\u4E2D\u3002\u9375\u5165create -h\u4EE5\u7372\u5F97\u66F4\u591A\u5E6B\u52A9\u3002
+help_create=\u8F49\u63DB\u4E4B\u524D\uFF0C\u61C9\u5BA3\u544Apdf\u7684\u5916\u89C0\uFF08\u5927\u5C0F\uFF0C\u5C0D\u9F4A\u65B9\u5F0F\u7B49\uFF09\uFF0C\u4E26\u5BA3\u544A\u5716\u6E90\u7684\u4F4D\u7F6E\u4EE5\u53CApdf\u7684\u4F4D\u7F6E\u3002\u6700\u5F8C\uFF0C\u9019\u4E9B\u53C3\u6578\u5C07\u6703\u5408\u4F75\u5230\u4E00\u500B\u540D\u70BATaskList\u7684xml\u6587\u4EF6\u4E2D\u3002\u8F38\u5165-m create -h\u4EE5\u7372\u5F97\u66F4\u591A\u5E6B\u52A9\u3002
 
 help_create_debug = \u958B\u555F\u5075\u932F\u6A21\u5F0F
 
