--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -54,7 +54,7 @@ err_tasklist_create = \u7121\u6CD5\u751F\u6210TaskList:%s
 err_unrecognizable_enum_long = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s\u3002\r\n\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
 
 err_unrecognizable_enum_short = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.
-
+err_unrecognized_argument_option=\u672A\u77E5\u9078\u9805 :%s
 err_unrecognized_option = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684\u9078\u9805\u3002
 help_convert=\u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u8F38\u5165-m convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
 help_convert_memory_max_usage=\u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\u9810\u8A2D\uFF1A%s
