Remove usage of properties in AbstractAction

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -1,5 +1,5 @@
 argperser.err.missing_argument_option = %s\u6C92\u6709\u63D0\u4F9B\u53C3\u6578\u503C
-argperser.err.missing_option = \u907A\u5931\u5FC5\u8981\u53C3\u6578
+argperser.err.missing_option=\u907A\u5931\u5FC5\u8981\u53C3\u6578\uFF1A%s
 
 convert.arg.memory_max_usage.help = \u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\u9810\u8A2D\uFF1A%s
 convert.arg.open_when_complete.help = \u5B8C\u6210\u8F49\u6A94\u5F8C\u958B\u555FPDF
