Write language_package.properties pack for listener

--- a/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/language_package_zh_TW.properties
@@ -8,7 +8,6 @@ convert.arg.tasklist_source.help = TaskList \u6A94\u6848(*.xml)
 convert.arg.tmp_folder.help = \u66AB\u5B58\u8CC7\u6599\u593E\u3002\u9810\u8A2D\u4F4D\u7F6E\uFF1A%s
 convert.help = \u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6\u3002\u8F38\u5165-m convert -h\u4EE5\u7372\u53D6\u66F4\u591A\u5E6B\u52A9\u3002
 convert.import_tasklists = \u532F\u5165TaskList\uFF1A
-convert.pdf_conversion_task = PDF\u8F49\u6A94\u4EFB\u52D9
 convert.start_conversion = \u958B\u59CB\u8F49\u63DB\uFF01\uFF01\uFF01
 
 create.arg.debug.help = \u958B\u555F\u5075\u932F\u6A21\u5F0F
@@ -50,9 +49,7 @@ public.err.overwrite = \u6A94\u6848\u5DF2\u5B58\u5728\uFF0C\u7121\u6CD5\u8907\u5
 public.err.path_is_file = \u6307\u5411\u7684\u8DEF\u5F91\u5FC5\u9808\u662F\u6A94\u6848:%s
 public.err.path_is_folder = \u6307\u5411\u7684\u8DEF\u5F91\u5FC5\u9808\u662F\u76EE\u9304:%s
 public.err.unrecognizable_enum_long = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s\u3002\r\n\u53EF\u9078\u64C7\u7684\u9078\u9805:%s
-public.err.unrecognizable_enum_short = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684%s.
 public.err.unrecognized_argument_option = \u672A\u77E5\u9078\u9805 :%s
-public.err.unrecognized_option = %s\u4E0D\u662F\u53EF\u8FA8\u8B58\u7684\u9078\u9805\u3002
 public.info.developer = \u958B\u767C\u8005
 public.info.exported = \u5DF2\u532F\u51FA
 public.info.exporting = \u532F\u51FA
@@ -66,3 +63,8 @@ public.info.verifying = \u9A57\u8B49
 public.info.version = \u7248\u672C
 
 create.tasklist_config = TaskList\u8A2D\u5B9A
+convert.listener.progress=\u9032\u5EA6\uFF1A
+convert.listener.err.image=\u5716\u7247\u8B80\u53D6\u5931\u6557\uFF1A%s
+convert.listener.err.conversion=\u8F49\u6A94\u5931\u6557\uFF1A%s
+convert.listener.done=[\u5B8C\u6210] %s
+convert.listener.converting=[%s] %d/%d \u500B\u5716\u6A94\u5DF2\u88AB\u52A0\u5165 %s
