--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -15,3 +15,12 @@ help=\u7372\u53D6\u66F4\u591A\u8CC7\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A
 img2pdf.usage.header=\u6B64\u7A0B\u5F0F\u53EF\u4EE5\u5C07\u591A\u500B\u5716\u50CF\u8F49\u63DB\u70BAPDF\u3002
 img2pdf.create.sorter=\u6307\u5B9A\u6392\u5E8F\u6A21\u5F0F\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.create.<sourceFiles>[0..*]=\u5305\u542B\u591A\u884C\u76EE\u9304\u4F4D\u7F6E\u7684\u4F86\u6E90\u6587\u4EF6
+
+
+img2pdf.convert.memory_max_usage = \u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.convert.open_when_complete = \u5B8C\u6210\u8F49\u6A94\u5F8C\u958B\u555FPDF
+img2pdf.convert.overwrite = \u8986\u84CB\u5DF2\u5B58\u5728\u7684\u6A94\u6848
+img2pdf.convert.tasklist_source = TaskList \u6A94\u6848(*.xml)
+img2pdf.convert.temp_folder = \u66AB\u5B58\u8CC7\u6599\u593E\u3002\u9810\u8A2D\u4F4D\u7F6E\uFF1A\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.convert.usage.header = \u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6
+img2pdf.convert.<tasklist_sources>[0.*]=Tasklist\u4F4D\u7F6E
