Add more parameter handler in ResourceBundleParameterHandler

--- a/maven/IMG2PDF/src/main/resources/cmd_err_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_err_zh_TW.properties
@@ -1,5 +1,10 @@
-err.parameter.handler.missing_required = \u907A\u5931\u5FC5\u8981%s: '%s'
-err.parameter.handler.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
+err.parameter.handler.missing_required.option=\u907A\u5931\u5FC5\u8981\u9078\u9805\uFF1A '%s'
+err.parameter.handler.missing_required.parameter=\u907A\u5931\u5FC5\u8981\u53C3\u6578\uFF1A '%s'\
 
+err.parameter.handler.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
+err.parameter.handler.type_convert.enum=\u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A\u53EF\u8F38\u5165[%s] \u4F46\u662F\u537B\u662F '%s'
+err.parameter.handler.type_convert.normal=\u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A%s(\u7121\u6548\u503C)\
+
+err.parameter.handler.unmatched_argument.unknown_option=\u672A\u77E5\u9078\u9805 : %s
 public.option = \u9078\u9805
 public.parameter = \u53C3\u6578
