--- a/maven/IMG2PDF/src/main/resources/cmd_err_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_err_zh_TW.properties
@@ -1,3 +1,13 @@
+err.execution.convert.handler.conversion.conversion=\u8F49\u6A94\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s\
+
+err.execution.convert.handler.conversion.overwrite=\u62D2\u7D55\u8986\u5BEB\uFF1A %s\
+
+err.execution.convert.handler.conversion.read_image=\u8B80\u53D6\u5716\u7247\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s
+err.execution.convert.handler.tasklist.no_task=\u627E\u4E0D\u5230\u4EFB\u4F55\u4EFB\u52D9\uFF1A %s
+err.execution.convert.handler.tasklist.not_found=\u627E\u4E0D\u5230Tasklist\u6A94\u6848\uFF1A %s\
+
+err.execution.convert.handler.tasklist.wrong_type=\u8DEF\u5F91\u5FC5\u9808\u662F\u500B%s,\u4F46\u537B\u662F'%s': %s\
+
 err.execution.create.handler.dirlist.not_found=\u627E\u4E0D\u5230Dirlist\u6A94\u6848\uFF1A %s\
 
 err.execution.create.handler.dirlist.wrong_type=\u8DEF\u5F91\u5FC5\u9808\u662F\u500B%s,\u4F46\u537B\u662F'%s': %s\
