Change resource files.

--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -1,26 +1,27 @@
-img2pdf.create.filter=\u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.create.list_destination = \u8F38\u51FA\u76EE\u6A19\u4EFB\u52D9\u5217\u8868\uFF08*.XML\uFF09\u3002
-img2pdf.create.overwrite_tasklist = \u8986\u84CBTaskList\u6587\u4EF6\uFF0C\u5373\u4F7F\u5B83\u5B58\u5728\u3002
-img2pdf.create.pdf_align=\u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.create.pdf_auto_rotate = \u81EA\u52D5\u65CB\u8F49\u9801\u9762\u3002
-img2pdf.create.pdf_destination = \u5DF2\u8F49\u63DB\u6587\u4EF6\u7684\u76EE\u7684\u5730\u3002
-img2pdf.create.pdf_direction=\u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.create.pdf_owner_password = PDF\u64C1\u6709\u4EBA\u5BC6\u78BC\u3002
-img2pdf.create.pdf_permission=\u6587\u4EF6\u7684\u8A2A\u554F\u6B0A\u9650\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.create.pdf_size = \u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002
-img2pdf.create.pdf_user_password = PDF\u7528\u6236\u5BC6\u78BC\u3002
-img2pdf.create.source = \u4F86\u6E90\u6A94\u6848
-img2pdf.create.usage.header=\u5EFA\u7ACB\u4E00\u500B\u5305\u542B\u6A94\u6848\u4F4D\u7F6E\u3001\u9801\u9762\u5C6C\u6027\u3001\u6587\u4EF6\u5C6C\u6027\u7684XML\u6A94\u3002
-help=\u7372\u53D6\u66F4\u591A\u8CC7\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A
-img2pdf.usage.header=\u6B64\u7A0B\u5F0F\u53EF\u4EE5\u5C07\u591A\u500B\u5716\u50CF\u8F49\u63DB\u70BAPDF\u3002
-img2pdf.create.sorter=\u6307\u5B9A\u6392\u5E8F\u6A21\u5F0F\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.create.<sourceFiles>[0..*]=\u5305\u542B\u591A\u884C\u76EE\u9304\u4F4D\u7F6E\u7684\u4F86\u6E90\u6587\u4EF6
+help = \u7372\u53D6\u66F4\u591A\u8CC7\u7372\u53D6\u66F4\u591A\u8CC7\u8A0A
 
-
+img2pdf.convert.<tasklist_sources>[0.*] = Tasklist\u4F4D\u7F6E
 img2pdf.convert.memory_max_usage = \u8A18\u61B6\u9AD4\u6700\u5927\u4F7F\u7528\u91CF\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.open_when_complete = \u5B8C\u6210\u8F49\u6A94\u5F8C\u958B\u555FPDF
 img2pdf.convert.overwrite = \u8986\u84CB\u5DF2\u5B58\u5728\u7684\u6A94\u6848
 img2pdf.convert.tasklist_source = TaskList \u6A94\u6848(*.xml)
 img2pdf.convert.temp_folder = \u66AB\u5B58\u8CC7\u6599\u593E\u3002\u9810\u8A2D\u4F4D\u7F6E\uFF1A\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.convert.usage.header = \u901A\u904E\u5DF2\u8A2D\u5B9A\u7684TaskList\u5C07\u591A\u500B\u5716\u50CF\u5408\u4F75\u70BApdf\u6587\u4EF6
-img2pdf.convert.<tasklist_sources>[0.*]=Tasklist\u4F4D\u7F6E
+img2pdf.create.<sourceFiles>[0..*] = \u5305\u542B\u591A\u884C\u76EE\u9304\u4F4D\u7F6E\u7684\u4F86\u6E90\u6587\u4EF6
+img2pdf.create.filter = \u5716\u6A94\u6A94\u540D\u904E\u6FFE\u5668\u3002\u4F7F\u7528\u6B63\u5247\u8868\u9054\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.create.list_destination = \u8F38\u51FA\u76EE\u6A19\u4EFB\u52D9\u5217\u8868\uFF08*.XML\uFF09\u3002
+img2pdf.create.overwrite_tasklist = \u8986\u84CBTaskList\u6587\u4EF6\uFF0C\u5373\u4F7F\u5B83\u5B58\u5728\u3002
+img2pdf.create.pdf_align = \u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.create.pdf_auto_rotate = \u81EA\u52D5\u65CB\u8F49\u9801\u9762\u3002
+img2pdf.create.pdf_destination = \u5DF2\u8F49\u63DB\u6587\u4EF6\u7684\u76EE\u7684\u5730\u3002
+img2pdf.create.pdf_direction = \u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.create.pdf_owner_password = PDF\u64C1\u6709\u4EBA\u5BC6\u78BC\u3002
+img2pdf.create.pdf_permission = \u6587\u4EF6\u7684\u8A2A\u554F\u6B0A\u9650\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.create.pdf_size = \u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002
+img2pdf.create.pdf_user_password = PDF\u7528\u6236\u5BC6\u78BC\u3002
+img2pdf.create.sorter = \u6307\u5B9A\u6392\u5E8F\u6A21\u5F0F\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.create.source = \u4F86\u6E90\u6A94\u6848
+img2pdf.create.usage.header = \u5EFA\u7ACB\u4E00\u500B\u5305\u542B\u6A94\u6848\u4F4D\u7F6E\u3001\u9801\u9762\u5C6C\u6027\u3001\u6587\u4EF6\u5C6C\u6027\u7684XML\u6A94\u3002
+img2pdf.debug = \u958B\u555F\u5075\u932F\u6A21\u5F0F
+img2pdf.usage.header = \u6B64\u7A0B\u5F0F\u53EF\u4EE5\u5C07\u591A\u500B\u5716\u50CF\u8F49\u63DB\u70BAPDF\u3002
+img2pdf.version = \u986F\u793A\u7248\u672C\u8CC7\u8A0A
