Add available option field.

--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -14,10 +14,12 @@ img2pdf.create.overwrite_tasklist = \u8986\u84CBTaskList\u6587\u4EF6\uFF0C\u5373
 img2pdf.create.pdf_align = \u6BCF\u9801pdf\u7684\u5C0D\u9F4A\u65B9\u5F0F\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.create.pdf_auto_rotate = \u81EA\u52D5\u65CB\u8F49\u9801\u9762\u3002
 img2pdf.create.pdf_destination = \u5DF2\u8F49\u63DB\u6587\u4EF6\u7684\u76EE\u7684\u5730\u3002
-img2pdf.create.pdf_direction = \u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.create.pdf_direction.0 = \u6BCF\u9801pdf\u7684\u5716\u50CF\u65B9\u5411\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
+img2pdf.create.pdf_direction.1=\u53EF\u9078\u64C7\u7684\u9078\u9805\uFF1A ${COMPLETION-CANDIDATES}
 img2pdf.create.pdf_owner_password = PDF\u64C1\u6709\u4EBA\u5BC6\u78BC\u3002
 img2pdf.create.pdf_permission = \u6587\u4EF6\u7684\u8A2A\u554F\u6B0A\u9650\u3002\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
-img2pdf.create.pdf_size = \u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002
+img2pdf.create.pdf_size.0 = \u6BCF\u500Bpdf\u9801\u9762\u5927\u5C0F\u3002
+img2pdf.create.pdf_size.1=\u53EF\u9078\u64C7\u7684\u9078\u9805\uFF1A ${COMPLETION-CANDIDATES}
 img2pdf.create.pdf_user_password = PDF\u7528\u6236\u5BC6\u78BC\u3002
 img2pdf.create.sorter = \u6307\u5B9A\u6392\u5E8F\u6A21\u5F0F\uFF08\u9810\u8A2D\uFF1A${DEFAULT-VALUE}\uFF09
 img2pdf.create.source = \u4F86\u6E90\u6A94\u6848
