Change DefaultConversionListener structure.Change resource bundle.

--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -1,11 +1,5 @@
-convert.import_tasklists = \u532F\u5165TaskList\uFF1A
-convert.listener.converting = [%s] %s %d/%d \u500B \u5716\u6A94\u5DF2\u88AB\u52A0\u5165 %s
-convert.listener.done = [\u5B8C\u6210][%d \u79D2] %s
-convert.listener.err.conversion = \u8F49\u6A94\u5931\u6557\uFF1A%s
-convert.listener.err.image = \u5716\u7247\u8B80\u53D6\u5931\u6557\uFF1A%s
-convert.listener.err.overwrite = [\u6A94\u6848\u5DF2\u5B58\u5728\uFF0C\u672A\u66F4\u52D5] %s
-convert.listener.progress = \u9032\u5EA6\uFF1A
-convert.start_conversion = \u958B\u59CB\u8F49\u63DB\uFF01\uFF01\uFF01
+execution.convert.start.import_tasklists = \u532F\u5165TaskList\uFF1A
+execution.convert.start.start_conversion = \u958B\u59CB\u8F49\u63DB\uFF01\uFF01\uFF01
 
 execution.convert.handler.conversion.conversion = \u8F49\u6A94\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s
 execution.convert.handler.conversion.overwrite=\u62D2\u7D55\u8986\u5BEB\uFF1A %s
