--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -11,7 +11,7 @@ handler.exception.source.not_found = \u627E\u4E0D\u5230\u4F86\u6E90\u6A94\u6848\
 handler.exception.source.wrong_type = \u8DEF\u5F91\u5FC5\u9808\u662F\u500B%s,\u4F46\u537B\u662F'%s': %s
 handler.exception.missing_required.option = \u907A\u5931\u5FC5\u8981\u9078\u9805\uFF1A '%s'
 handler.exception.missing_required.parameter = \u907A\u5931\u5FC5\u8981\u53C3\u6578\uFF1A '%s'
-handler.exception.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
+public.try_help = \u8F38\u5165 '%s --help' \u7372\u53D6\u66F4\u591A\u8CC7\u8A0A\u3002
 handler.exception.type_convert.enum = \u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A\u53EF\u8F38\u5165[%s] \u4F46\u662F\u537B\u662F '%s'
 handler.exception.type_convert.normal = \u63D0\u4F9B\u7121\u6548%s\u503C \u5728 '%s'\uFF1A%s(\u7121\u6548\u503C)
 handler.exception.unmatched_argument.unknown_option=\u672A\u77E5\u9078\u9805 : %s
