Handle InvalidFileException in PDFConverterExceptionHandler.

--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -50,3 +50,4 @@ public.imported = \u5DF2\u532F\u5165
 public.importing = \u532F\u5165
 public.option = \u9078\u9805
 public.parameter = \u53C3\u6578
+handler.exception.conversion.invalid_file=\u7121\u6548\u6A94\u6848\uFF1A%s
