Handle FileNameFormatter.NotMappedPattern.

--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -51,3 +51,4 @@ public.importing = \u532F\u5165
 public.option = \u9078\u9805
 public.parameter = \u53C3\u6578
 handler.exception.conversion.invalid_file=\u7121\u6548\u6A94\u6848\uFF1A%s
+handler.exception.dirlist_task_factory.source.no_map_pattern=\u6C92\u6709\u5C0D\u61C9\u7684\u503C\uFF1A%s
