Handle PDFConverterExceptionHandler in ConvertCommand.

--- a/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
+++ b/maven/IMG2PDF/src/main/resources/cmd_zh_TW.properties
@@ -1,8 +1,8 @@
-execution.convert.start.start_conversion = \u958B\u59CB\u8F49\u63DB\uFF01\uFF01\uFF01
+execution.convert.start.start_conversion=\u958B\u59CB\u8F49\u6A94\u4F5C\u696D
 
 handler.exception.conversion.conversion = \u8F49\u6A94\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s
 handler.exception.conversion.overwrite=\u62D2\u7D55\u8986\u5BEB\uFF1A %s
-handler.exception.conversion.read_image=\u8B80\u53D6\u5716\u7247\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s
+handler.exception.conversion.read_image=\u8B80\u53D6\u5716\u7247\u6642\u767C\u751F\u932F\u8AA4\uFF1A %s ->%s
 handler.exception.dirlist_task_factory.dirlist.not_found=\u627E\u4E0D\u5230Dirlist\u6A94\u6848\uFF1A %s
 handler.exception.dirlist_task_factory.dirlist.wrong_type=\u8DEF\u5F91\u5FC5\u9808\u662F\u500B%s,\u4F46\u537B\u662F'%s': %s
 handler.exception.dirlist_task_factory.source.overwrite=\u62D2\u7D55\u8986\u5BEB\uFF1A %s
